とりあえずの完成

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -4,7 +4,7 @@ title: About
 permalink: /about/
 ---
 <h2>noamnastについて</h2>
-<p>中央大学経済学部</p>
+<p>内野 游とかそんな名前で創作活動してる時もあります。もし飛行機やコンピュータなど私を連想させるアイコンだったら、それは私でしょう。</p>
 
 <p>主にバックエンドが好きな機械オタク。</p>
 
@@ -12,43 +12,7 @@ permalink: /about/
 
 <p>フォントがとっても好きで、書体制作もしている。<small>そのうちこのサイトの欧文・かなは独自書体にしてもいいかもしれない。</small></p>
 
-<p>入試に向けてプログラミングの勉強ができなかったことを言い訳にしているが、プログラミングスキルは2021年1月現在Rails・Django・Flask・Nuxtがそれぞれちょっとわかる程度まで落ちていることが判明した。（昔はExpressもちょーーっとだけ書けた）</p>
-
-<script>
-  var ctx = document.getElementById("myChart");
-  var myChart = new Chart(ctx, {
-  type: 'radar',
-  data: {
-    labels: ["英語", "数学", "国語", "理科", "社会"],
-    datasets: [{
-      label: 'Aさん',
-      data: [92, 72, 86, 74, 86],
-      backgroundColor: 'RGBA(225,95,150, 0.5)',
-      borderColor: 'RGBA(225,95,150, 1)',
-      borderWidth: 1,
-      pointBackgroundColor: 'RGB(46,106,177)'
-    }],
-  },
-    options: {
-      title: {
-        display: true,
-      text: 'プログラミング、どれだけわかる？'
-      },
-      scale:{
-        ticks:{
-          suggestedMax: 100,
-          suggestedMin: 0,
-          stepSize: 10,
-          callback: function(value, index, values){
-            return  value
-          }
-        }
-      }
-    }
-  })
-</script>
-
-
+<p>入試に向けてプログラミングの勉強ができなかったことを言い訳にしているが、プログラミングスキルは2021年1月現在Rails・Django・Flask・Nuxtがそれぞれちょっとわかるのが限界って程度まで落ちていることが判明した。（昔はExpressもちょーーっとだけ書けた）</p>
 <canvas id="myRaderChart"></canvas>
 <script>
   var ctx = document.getElementById("myRaderChart");
@@ -58,7 +22,7 @@ permalink: /about/
           labels: ["Ruby系", "Python系", "PHP", "Java", "フロントエンド/HTML/CSS"],
           datasets: [{
               label: '私',
-              data: [5, 3, 2, 0, 4],
+              data: [5, 3, 2, 0, 6],
               backgroundColor: 'RGB(214,250,137,0.4)',
               borderColor: 'RGB(250,137,139)',
               borderWidth: 1,
