--- a/_pages/articles.html
+++ b/_pages/articles.html
@@ -8,8 +8,16 @@ permalink: /articles/
 {% for page in site.posts %}
     <div class="uk-card uk-card-default uk-card-body uk-box-shadow-medium" style="margin-top: 1em; margin-bottom: 1em;">
         <h3 class="uk-card-title">{{ page.title }}</h3>
+        <p>{{ page.date| date: "%Y年%m月%d日" }} | Tags:
+          {% if page.tags %}
+            {% for tag in page.tags %}
+              <span class="uk-badge">{{tag}}</span>
+            {% endfor %}
+          {% endif %}
+        </p>
         <p>{{ page.description }}</p>
         <a href="{{page.url}}">もっと見る</a>
     </div>
 {% endfor %}
+<a class="uk-button uk-button-primary" style="margin: 1em;" href="{{site.baseurl}}/tags">タグクラウド（タグから検索）</a>
 </div>
